[package]
name = "downstream-kit"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Claw kit facade for batpak-family sync operations."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/downstream-kit"
publish = false

[features]
default = []

[dependencies]
batpak = { path = "../core", version = "0.7.5", default-features = false }
syncbat = { path = "../syncbat", version = "0.1.0" }

[lints]
workspace = true
