[package]
name = "batpak"
version = "0.7.5"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Event sourcing with causal graphs and caller-defined gates. Sync API, no async runtime."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/batpak"
readme = "../../../README.md"
keywords = ["event-sourcing", "audit-trail", "causal-graph", "hash-chain", "append-only"]
categories = ["database-implementations", "data-structures"]
exclude = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default features are production-safe. Crash/fault injection hooks are
# intentionally excluded so downstream default builds cannot name test-only
# writer panic, frontier mutation, or fault injection surfaces.
default = ["blake3"]
blake3 = ["dep:blake3"]
dangerous-test-hooks = ["dep:fastrand"]

[dependencies]
uuid = { version = ">=1.20, <1.21", default-features = false, features = ["std", "v7"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
batpak-macros-support = { path = "../macros-support", version = "0.7.0" }
batpak-macros = { path = "../macros", version = "0.7.0" }
blake3 = { version = "1", optional = true }
flume = "0.12"
crc32fast = "1"
# Canonical report and receipt bytes are fixture-locked against this exact
# encoder version. Bump deliberately with golden refreshes and ADR-0019 review.
rmp-serde = "=1.3.1"
dashmap = "6"
parking_lot = "0.12"
tracing = "0.1"
memmap2 = "0.9"
rayon = "1.12"
fastrand = { version = "2", optional = true }
# tempfile 3.25+ allows getrandom >=0.3,<0.5 and Cargo may pick 0.4,
# splitting the workspace RNG graph. Stay on the latest 0.3-only line.
tempfile = ">=3.24, <3.25"
libc = "0.2"
ed25519-compact = { version = "2.3.0", default-features = false, features = ["std"] }
zeroize = "1"
# NO TOKIO. Invariant 1.

[dev-dependencies]
batpak-bench-support = { path = "../bench-support", version = "0.7.0" }
proptest = "1"
arbitrary = { version = "1", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = ">=3.24, <3.25"
trybuild = "1"
fastrand = "2"
serial_test = { version = "3.4.0", features = ["file_locks"] }
loom = "0.7"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
yaml_serde = "0.10.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }

[lints]
workspace = true

[[bench]]
name = "write_throughput"
harness = false

[[bench]]
name = "cold_start"
harness = false

[[bench]]
name = "projection_latency"
harness = false

[[bench]]
name = "compaction"
harness = false

[[bench]]
name = "subscription_fanout"
harness = false

[[bench]]
name = "unified_bench"
harness = false

[[bench]]
name = "batch_throughput"
harness = false

[[bench]]
name = "writer_staging"
harness = false

[[bench]]
name = "writer_batch_staging"
harness = false

[[bench]]
name = "replay_lanes"
harness = false

[[bench]]
name = "topology_matrix"
harness = false

[[bench]]
name = "topology_write_cost"
harness = false

[[bench]]
name = "columnar_query"
harness = false

[[bench]]
name = "query_materialization"
harness = false

[[bench]]
name = "ancestry_walk"
harness = false

[[bench]]
name = "frontier_waiters"
harness = false

[[bench]]
name = "evidence_reports"
harness = false
