[package]
name = "hbat"
version = "0.0.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Reference host process for the batpak family. Not a product daemon."
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "hbat"
path = "src/main.rs"

[features]
default = []

[dependencies]
batpak = { path = "../core", version = "0.7.6", default-features = false }
syncbat = { path = "../syncbat", version = "0.7.6" }
netbat = { path = "../netbat", version = "0.7.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "=1.3.1"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
tempfile = ">=3.24, <3.25"

[lints]
workspace = true
