[package]
name = "hostbat"
version = "0.8.3"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Generic deterministic module host: mount content-identified modules over a syncbat Core."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/hostbat"
readme = "README.md"
keywords = ["event-sourcing", "runtime", "host", "module"]
categories = ["database-implementations"]
# Part of the decoupled bvisor admission-kernel track (its first real consumer is
# bvisor, which is itself `publish = false`). Stays out of the 0.9.0 release
# surface until the owner promotes the whole kernel track. Mirrors bvisor.
publish = false

[features]
default = []

[dependencies]
# The host composes a `syncbat::Core` and reuses its module/operation/admission/
# receipt seams — hostbat adds content identity, multi-axis modules, lifecycle
# hooks, and a generic supervisor ABOVE this, never reimplementing it.
syncbat = { path = "../syncbat", version = "0.8.3" }
# The Spawn seam (the reviewed `batpak::store::Spawn`) backs the generic
# supervisor, plus the canonical encoder + blake3 hash helpers that give modules
# and the host composition their content identity.
batpak = { path = "../core", version = "0.8.3", default-features = false }
serde = { version = "1", features = ["derive"] }
rmpv = "=1.3.1"

[dev-dependencies]
tempfile = ">=3.24, <3.25"

[lints]
workspace = true
