[package]
name = "batpak-macros-support"
version = "0.8.2"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Shared support types for batpak macros. Not intended for direct use."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/batpak-macros-support"
readme = "README.md"
keywords = ["event-sourcing", "macros", "internal"]
categories = ["development-tools::procedural-macro-helpers"]

[lints]
workspace = true

[dependencies]
inventory = "0.3"
# Lane-neutral value type for registered schema upcast steps. The chain runner
# in batpak core operates on rmpv::Value so one migration serves both the JSON
# and raw-msgpack replay lanes. Pinned to the rmp line rmp-serde =1.3.1 uses.
rmpv = "1.3"
