[package]
name = "batpak-macros"
version = "0.7.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the batpak event-sourcing store."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/batpak-macros"
readme = "README.md"
keywords = ["event-sourcing", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
batpak-macros-support = { path = "../macros-support", version = "0.7.0" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
