[package]
name = "netbat"
version = "0.8.3"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Thin sync-first server/network boundary exposure layer for syncbat."
repository = "https://github.com/freebatteryfactory/batpak"
homepage = "https://github.com/freebatteryfactory/batpak"
documentation = "https://docs.rs/netbat"
readme = "README.md"
keywords = ["event-sourcing", "network", "sync", "server"]
categories = ["network-programming"]

[features]
default = []

[dependencies]
syncbat = { path = "../syncbat", version = "0.8.3" }
flume = "0.12"
# Tracing spans around the accept loop, per-connection serve, and
# dispatch are emitted from the wire layer. Subscribers come from
# the binary.
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "boundary"
harness = false

[lints]
workspace = true
