[package]
name = "syncbat-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Procedural macros for syncbat operation kits."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/syncbat-macros"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
