[package]
name = "syncbat-macros"
version = "0.8.1"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Procedural macros for syncbat operation kits."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/syncbat-macros"
readme = "README.md"
keywords = ["event-sourcing", "macros", "sync"]
categories = ["development-tools::procedural-macro-helpers"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
