[package]
name = "syncbat"
version = "0.8.1"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Sync-first runtime layer for batpak-family operation kits."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/syncbat"
readme = "README.md"
keywords = ["event-sourcing", "runtime", "sync", "operation-kit"]
categories = ["database-implementations"]

[features]
default = []

[dependencies]
batpak = { path = "../core", version = "0.8.1", default-features = false }
serde = { version = "1", features = ["derive"] }
syncbat-macros = { path = "../syncbat-macros", version = "0.8.1" }
# `tracing` provides structured spans + events around dispatch.
# Subscribers come from the binary (hbat or downstream); syncbat just
# emits. No runtime cost when no subscriber is installed.
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = ">=3.24, <3.25"
trybuild = "1"
proptest = "1"

[[bench]]
name = "dispatch"
harness = false

[lints]
workspace = true
