[package]
name = "syncbat"
version = "0.8.3"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Sync-first runtime layer for batpak-family operation kits."
repository = "https://github.com/heyoub/batpak"
homepage = "https://github.com/heyoub/batpak"
documentation = "https://docs.rs/syncbat"
readme = "README.md"
keywords = ["event-sourcing", "runtime", "sync", "operation-kit"]
categories = ["database-implementations"]

[features]
default = []

[dependencies]
batpak = { path = "../core", version = "0.8.3", default-features = false }
serde = { version = "1", features = ["derive"] }
# The `#[operation]` attribute macro lives in the one family proc-macro crate
# (`batpak-macros`); re-exported below as `syncbat::operation`.
batpak-macros = { path = "../macros", version = "0.8.3" }
blake3 = "1"
flume = "0.12"
# `tracing` provides structured spans + events around dispatch.
# Subscribers come from the binary (a downstream host); syncbat just
# emits. No runtime cost when no subscriber is installed.
tracing = "0.1"

[dev-dependencies]
batpak-testkit = { path = "../testkit", version = "0.8.3" }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = ">=3.24, <3.25"
trybuild = "1"
proptest = "1"
serde_json = "1"

[[bench]]
name = "dispatch"
harness = false

[lints]
workspace = true
